Fix spacing on skills

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,7 @@ a.l-links {
 
 .about-2 {
   text-align: center;
+  padding-bottom: 30px;
 }
 
 /* SKILLS CSS */
